Docker compose fixes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,6 @@ services:
     image: ghcr.io/abasit/fhir-mimic-h2:latest
     ports:
       - "8080:8080"
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/fhir/Patient?_count=1"]
-      interval: 30s
-      timeout: 10s
-      retries: 10
-      start_period: 60s
 
   green-agent:
     build: .
@@ -18,5 +12,4 @@ services:
       - FHIR_SERVER_URL=http://fhir-server:8080/fhir
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     depends_on:
-      fhir-server:
-        condition: service_healthy
+      - fhir-server
