--- a/scenario.toml
+++ b/scenario.toml
@@ -6,8 +6,8 @@ role = "purple_agent"
 endpoint = "http://127.0.0.1:9001"
 
 [config]
-num_tasks = 30
-mcp_enabled = false
-tasks_file = "data/test.csv"
+num_tasks = 0
+tasks_file = "data/all_tasks.csv"
+mcp_enabled = true
 max_iterations = 10
-max_concurrent = 1
+max_concurrent = 3
